# PyDorr

./: README.md  main.py  pyproject.toml
Freteq.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pydorr/: client.py  dorr.py  ext.py
pydorr/data/: tokens.txt
pydorr/events/: error.py
pydorr/extension/: commands.py  tokenizer.py
